[ 13-DEC-2018 ] Fixed compilation errors Integrated code for fixes done by GUI Team

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,7 +44,7 @@
     </mat-menu>
     <mat-menu #log="matMenu">
             <button mat-menu-item>Log Phone Call</button>
-            <button mat-menu-item>Log Commitment</button>
+            <button mat-menu-item (click)="openLogCommitment();">Log Commitment</button>
             <button mat-menu-item>Log Notes</button>
             <button mat-menu-item>Log Research</button>
             <button mat-menu-item>Log Email</button>
