--- a/src/app/modules/case/hsia-info/hsia-info.component.html
+++ b/src/app/modules/case/hsia-info/hsia-info.component.html
@@ -1,72 +1,164 @@
-<div class="hsia">  
-    <fieldset class="hsiaFieldset">
-      <legend>HSIA</legend>
-      <label>HSIA Order Status :</label>
-      <span style="margin-left:30%">
-        <mat-form-field>
-            <input matInput>
-        </mat-form-field>
-    </span><br>
-    <label>HSIA Order Due Date :</label>
-    <span style="margin-left:30%">
-      <mat-form-field>
-          <input matInput>
-      </mat-form-field>
-    </span><br>
-    <label>HSIA Order Number :</label>
-    <span style="margin-left:30%">
-      <mat-form-field>
-          <input matInput>
-      </mat-form-field>
-    </span><br>
-    <label>HSIA Order uBan :</label>
-    <span style="margin-left:30%">
-      <mat-form-field>
-          <input matInput>
-      </mat-form-field>
-    </span><br>
-    <label>Network Transport Type :</label>
-    <span style="margin-left:30%">
-      <mat-form-field>
-          <input matInput>
-      </mat-form-field>
-    </span><br>
-    <label>Sub Transport Type :</label>
-    <span style="margin-left:30%">
-      <mat-form-field>
-          <input matInput>
-      </mat-form-field>
-    </span><br>
-    <label>Full Tech Install Indicator :</label>
-    <span style="margin-left:30%">
-      <mat-form-field>
-          <input matInput>
-      </mat-form-field>
-    </span><br>
-    <label>Inside Wiring Indicator :</label>
-    <span style="margin-left:30%">
-      <mat-form-field>
-          <input matInput>
-      </mat-form-field>
-    </span><br>
-    <label>Inside Wiring Type :</label>
-    <span style="margin-left:30%">
-      <mat-form-field>
-          <input matInput>
-      </mat-form-field>
-    </span><br>
-    <label>HSIA Due Date :</label>
-    <span style="margin-left:30%">
-      <mat-form-field>
-          <input matInput>
-      </mat-form-field>
-    </span><br>
-    <label>HSIA-E CPE Choice :</label>
-    <span style="margin-left:30%">
-      <mat-form-field>
-          <input matInput>
-      </mat-form-field>
-    </span>
+<div class="hsiaFieldset">
+    <fieldset>
+        <legend>HSIA</legend>
+        <div class="row_one">
+            <label>HSIA Order Status : </label>
+            <mat-form-field style="margin-left:15%">
+                <input matInput [disabled]="true">
+            </mat-form-field>
+        </div>
+        <div class="row_one">
+            <label>HSIA Order Due Date :</label>
+            <mat-form-field style="margin-left:12%">
+                <input matInput [disabled]="true">
+            </mat-form-field>
+        </div>
+        <div class="row_one">
+            <label>HSIA Order Number :</label>
+            <mat-form-field style="margin-left:14%">
+                <input matInput [disabled]="true">
+            </mat-form-field>
+        </div>
+        <div class="row_one">
+            <label>HSIA Order uBan :</label>
+            <mat-form-field style="margin-left:17%">
+                <input matInput [disabled]="true">
+            </mat-form-field>
+        </div>
+        <div class="row_one">
+            <label>Network Transport Type :</label>
+            <mat-form-field style="margin-left:10.5%">
+                <input matInput [disabled]="true">
+            </mat-form-field>
+        </div>
+        <div class="row_one">
+            <label>Sub Transport Type :</label>
+            <mat-form-field style="margin-left:15%">
+                <input matInput [disabled]="true">
+            </mat-form-field>
+        </div>
+        <div class="row_one">
+            <label>Full Tech Install Indicator :</label>
+            <mat-form-field style="margin-left:10%">
+                <input matInput [disabled]="true">
+            </mat-form-field>
+        </div>
+        <div class="row_one">
+            <label>Inside Wiring Indicator :</label>
+            <mat-form-field style="margin-left:12.5%">
+                <input matInput [disabled]="true">
+            </mat-form-field>
+        </div>
+        <div class="row_one">
+            <label>Inside Wiring Type :</label>
+            <mat-form-field style="margin-left:16.5%">
+                <input matInput [disabled]="true">
+            </mat-form-field>
+        </div>
+        <div class="row_one">
+            <label>HSIA Due Date :</label>
+            <mat-form-field style="margin-left:20%">
+                <input matInput [disabled]="true">
+            </mat-form-field>
+        </div>
+        <div class="row_one">
+            <label>HSIA-E CPE Choice :</label>
+            <mat-form-field style="margin-left:14%">
+                <input matInput [disabled]="true">
+            </mat-form-field>
+        </div>
     </fieldset>
-  
+</div>
+
+<div class="falloutInfoFieldset">
+    <fieldset>
+        <legend>Fallout Information</legend>
+        <div class="row_one">
+            <label>HSIA Error Code :</label>
+            <mat-form-field style="margin-left:14%">
+                <input matInput [disabled]="true">
+            </mat-form-field>
+        </div>
+        <div class="row_one">
+            <label>HSIA Error Description :</label>
+            <mat-form-field style="margin-left:14%">
+                <input matInput [disabled]="true">
+            </mat-form-field>
+        </div>
+        <div class="row_one">
+            <label>Source :</label>
+            <mat-form-field style="margin-left:14%">
+                <input matInput [disabled]="true">
+            </mat-form-field>
+        </div>
+        <div class="row_one">
+            <label>Source Activity Name :</label>
+            <mat-form-field style="margin-left:14%">
+                <input matInput [disabled]="true">
+            </mat-form-field>
+        </div>
+        <div class="row_one">
+            <label>Fallout Ind :</label>
+            <mat-form-field style="margin-left:14%">
+                <input matInput [disabled]="true">
+            </mat-form-field>
+        </div>
+    </fieldset>
+</div>
+<div class="efbsFieldset">
+    <fieldset>
+        <legend>eFBS</legend>
+        <div class="row_one">
+            <label>IPAG Order Status :</label>
+            <mat-form-field style="margin-left:16.5%">
+                <input matInput [disabled]="true">
+            </mat-form-field>
+        </div>
+        <div class="row_one">
+            <label>EMT Assignment(CLLI) :</label>
+            <mat-form-field style="margin-left:16.5%">
+                <input matInput [disabled]="true">
+            </mat-form-field>
+        </div>
+        <div class="row_one">
+            <label>EMT Equipment Type :</label>
+            <mat-form-field style="margin-left:16.5%">
+                <input matInput [disabled]="true">
+            </mat-form-field>
+        </div>
+        <div class="row_one">
+            <label>EMT V-LAN :</label>
+            <mat-form-field style="margin-left:16.5%">
+                <input matInput [disabled]="true">
+            </mat-form-field>
+        </div>
+        <div class="row_one">
+            <label>EMT Card/Slot/Port :</label>
+            <mat-form-field style="margin-left:16.5%">
+                <input matInput [disabled]="true">
+            </mat-form-field>
+        </div>
+        <div class="row_one">
+            <label>EMT/FBGs-Vlan/c-Vlan :</label>
+            <mat-form-field style="margin-left:16.5%">
+                <input matInput [disabled]="true">
+            </mat-form-field>
+        </div>
+        <div class="row_one">
+            <label>INL S-VLAN :</label>
+            <mat-form-field style="margin-left:16.5%">
+                <input matInput [disabled]="true">
+            </mat-form-field>
+        </div>
+        <div class="row_one">
+            <label>INL C-VLAN :</label>
+            <mat-form-field style="margin-left:16.5%">
+                <input matInput [disabled]="true">
+            </mat-form-field>
+        </div>
+
+    </fieldset>
+</div>
+<div class="closeBtn">
+    <button (click)="changeComp(0)" mat-raised-button color="primary">Close</button>
 </div>
