--- a/src/app/modules/case/select-commitments/select-commitments.component.css
+++ b/src/app/modules/case/select-commitments/select-commitments.component.css
@@ -4,51 +4,48 @@ p{
   th{
     /* font-weight: bold; */
     font-size: 15px;
-    background-color: aquamarine;
-    color:black;
+    background-color:#3f51b5;
+    color:white;
   }
-  mat-expansion-panel-header{
-    background-color: darkblue;
-    color: white;
-  }
-  mat-header-cell{
-    color: blue;
-  }
+  td{
+    width: 10%;
+  }  
   .grid-container {
     margin-left: 5px;
-    width: 99.5%;
-    height: 300px;
+    width: 99.2%;
+    height: 420px;
     overflow: auto; 
     border: 1px solid black; 
+    margin-top: -3%;
   }
   table.mat-elevation-z8{
     width: 100%;
   }
+  .highlight{
+    background:greenyellow;
+    color: white;
+  }
   .sideRight{
-    float: right;
-    margin-right: 5px;
+    margin-left: 12%;
   }
   .sideMiddle{
-    margin-left: 15%;
+    margin-left: 12%;
   }
   .datePicker{
-    margin-left: 15%;
+    margin-left: 12%;
   }
   .sideLeft{
     margin-left: 1%;
   }
+  .showListBtn{ 
+    /* margin-left: 6%; */
+    float: right;
+    margin-right: 9px;
+    margin-top: 0.5%;
+   }
   .side{
     float:right;
     margin-right: 100px;
-  }
-  /* .highlight {
-    background-color: #1976D2 !important;
-    font-weight: bold;
-  } */
-  
-  .result-row:hover {
-    background-color: #BBDEFB;
-    
   }
   
   .datatable> ::ng-deep figure {
@@ -67,13 +64,8 @@ p{
     margin-left: 35.5%;
     
   }
-  .buttonRight{ 
-   float: right;
-  }
-  .highlight{
-    background:#BBDEFB;
-    color: white;
-  }
+  
+  
   .ftable
   {
     width: 100%; 
@@ -86,10 +78,29 @@ p{
   .ftd2{
     width:10%;
   } 
-  .plannerRight{
-    float: right;
+  .planner{
+    margin-left: 61%;
     margin-top: 2%;
+  }
+  .plannerText{
+    width: 22.5%;
   }
   table, .buttonGroup{
     width: 100%;
+    margin-top: -1%
+  }
+  .deleteRecord{
+    margin-left: -15%;
+  }
+  .reset{
+    margin-left: -15%;
+  }
+  .fullfillDate{
+    margin-left: 15%;
+  }
+  .new{
+    margin-left: 42%;
+  }
+  .done{
+    margin-left: 63%;
   }
