--- a/src/app/modules/case/select-commitments/select-commitments.component.css
+++ b/src/app/modules/case/select-commitments/select-commitments.component.css
@@ -8,12 +8,19 @@ p{
     color:white;
   }
   td{
-    width: 10%;
+    width: 2%;
   }  
+  .header{
+    margin-top: -1%;
+    height: 5.8%;
+    width: 100%;
+    background-color: #3f51b5;
+    color: white;
+  }
   .grid-container {
     margin-left: 5px;
     width: 99.2%;
-    height: 420px;
+    height: 400px;
     overflow: auto; 
     border: 1px solid black; 
     margin-top: -3%;
