[ 15-DEC-2018 ] Fixed compilation errors Integrated code for fixes done by GUI Team

--- a/src/app/modules/case/activity-log/activity-log.component.html
+++ b/src/app/modules/case/activity-log/activity-log.component.html
@@ -99,4 +99,5 @@
       </tr>
   </table>
 </div>
+<mat-progress-spinner style="margin-top:-34%;left: 45%;z-index:125;" *ngIf="isLoading" color="success" mode="indeterminate"></mat-progress-spinner>
   
