--- a/src/app/modules/case/comm-history/comm-history.component.html
+++ b/src/app/modules/case/comm-history/comm-history.component.html
@@ -45,4 +45,5 @@
                                     (click)="setClickedRow(row)"></tr>
     </table>      
   </div>
+  <mat-progress-spinner style="margin-top:8%;left: 45%;z-index:125;" *ngIf="isLoading" color="success" mode="indeterminate"></mat-progress-spinner>
   </div>
