--- a/src/app/modules/case/hsia-info/hsia-info.component.html
+++ b/src/app/modules/case/hsia-info/hsia-info.component.html
@@ -160,5 +160,5 @@
     </fieldset>
 </div>
 <div class="closeBtn">
-    <button (click)="changeComp(0)" mat-raised-button color="primary">Close</button>
+    <button mat-raised-button color="primary">Close</button>
 </div>
