--- a/src/app/shared/components/warning-message-dialog/warning-message-dialog.component.html
+++ b/src/app/shared/components/warning-message-dialog/warning-message-dialog.component.html
@@ -1,4 +1,5 @@
+
 <p>
   {{message}}
 </p>
-<button (click)="onNoClick()">close</button>
+<button mat-flat-button color="primary" (click)="onNoClick()">close</button>
