--- a/src/app/modules/dialogs/bgate-error-dialog/bgate-error-dialog.component.html
+++ b/src/app/modules/dialogs/bgate-error-dialog/bgate-error-dialog.component.html
@@ -23,8 +23,32 @@
     </tr>
   </table>
   <div class="errorDiv">
-    <table>
-      
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+      <ng-container matColumnDef="type1">
+        <th mat-header-cell *matHeaderCellDef> Error </th>
+        <td mat-cell *matCellDef="let queuesCase"> {{queuesCase.oType}} </td>
+      </ng-container>
+ 
+      <ng-container matColumnDef="idNumber">
+        <th mat-header-cell *matHeaderCellDef> Error Discription </th>
+        <td mat-cell *matCellDef="let queuesCase"> {{queuesCase.idNumber}} </td>
+      </ng-container>
+ 
+      <ng-container matColumnDef="special">
+        <th mat-header-cell *matHeaderCellDef> Error Number</th>
+        <td mat-cell *matCellDef="let queuesCase"> {{queuesCase.xSpecialOrder}} </td>
+      </ng-container>
+ 
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Error Status </th>
+        <td mat-cell *matCellDef="let queuesCase"> {{queuesCase.name}} </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+      <tr mat-row class="result-row" *matRowDef="let row; columns: displayedColumns;"
+                                    [ngClass]="{'highlight': selectedTyp == row}"
+                                                        (click)="highlight(row)"
+                                                        (click)="setClickedRow(row)"></tr>
     </table>
   </div>
   <table>
