--- a/src/app/modules/case/select-commitments/select-commitments.component.html
+++ b/src/app/modules/case/select-commitments/select-commitments.component.html
@@ -68,7 +68,7 @@
       <!-- Weight Column -->
       <ng-container matColumnDef="Commit Date">
         <th mat-header-cell *matHeaderCellDef> Commit Date </th>
-        <td mat-cell *matCellDef="let selectCommit"> {{selectCommit.commitDate}} </td>
+        <td mat-cell *matCellDef="let selectCommit"> {{selectCommit.schedCmpltime}} </td>
       </ng-container>
 
       <!-- Symbol Column -->
@@ -79,12 +79,12 @@
 
       <ng-container matColumnDef="Original Date">
         <th mat-header-cell *matHeaderCellDef> Original Date </th>
-        <td mat-cell *matCellDef="let selectCommit"> {{selectCommit.originalDate}} </td>
+        <td mat-cell *matCellDef="let selectCommit"> {{selectCommit.xOrigTime}} </td>
       </ng-container>
 
       <ng-container matColumnDef="Complete Date">
         <th mat-header-cell *matHeaderCellDef> Complete Date </th>
-        <td mat-cell *matCellDef="let selectCommit"> {{selectCommit.completeDate}} </td>
+        <td mat-cell *matCellDef="let selectCommit"> {{selectCommit.actCmpltime}} </td>
       </ng-container>
       <ng-container matColumnDef="Organization/Function">
         <th mat-header-cell *matHeaderCellDef> Organization/Function </th>
