--- a/src/app/modules/case/service-info/service-info.component.css
+++ b/src/app/modules/case/service-info/service-info.component.css
@@ -86,7 +86,7 @@ margin-left: 6%;
     width: 10%;
 }
 tr.mat-header-row{
-    height: 30px;
+    height: 21px;
     background: #3f51b5;
     color: white;
 }
@@ -139,12 +139,14 @@ th.mat-header-cell{
     width: 45%;
     display: inline-block;
     border: 1px solid gray;
+    overflow: auto;
 }
 .unsupOption{
     height: 100px;
     width: 45%;
     border: 1px solid gray;
     float: right;
+    overflow: auto;
 }
 .optionTbl{
     width: 100%;
@@ -160,7 +162,9 @@ th.mat-header-cell{
     background: #3f51b5;
     color: white;
 }
-
+tr.mat-row{
+    height: 25%;
+}
 
 
 
