[ 28-DEC-2018 ] Brass screen button sections added and some popups based on user story

--- a/src/app/modules/dialogs/dispatch-dialog/dispatch-dialog.component.html
+++ b/src/app/modules/dialogs/dispatch-dialog/dispatch-dialog.component.html
@@ -3,15 +3,15 @@
     <table>
         <tr>
             <td><label>ID :</label></td>
-            <td><input disabled></td>
+            <td><input disabled [value]="caseInfo.caseId"></td>
         </tr>
         <tr>
             <td><label>Title :</label></td>
-            <td><input disabled></td>
+            <td><input disabled [value]="caseInfo.tableCase.title"></td>
         </tr>
         <tr>
             <td><label>WIPbin :</label></td>
-            <td><input disabled></td>
+            <td><input disabled [value]="caseInfo.tableWipbin.title"></td>
         </tr>
     </table>
 </div><br>
